K8S/np-srv.yaml
# node-port
# exposes our dotnet pgsql db in local port 30007
apiVersion: v1
kind: Service
metadata:
  name: pgsql-np
  labels:
    app: postgres-dotnet
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30007
  selector:
    app: postgres-dotnet
---
#exposes our rails pgsql at port 30006
apiVersion: v1
kind: Service
metadata:
  name: pgsql-np
  labels:
    app: postgres-rails
spec:
  type: NodePort
  ports:
    - port: 5432
      targetPort: 5432
      nodePort: 30006
  selector:
    app: postgres-rails
