K8S/eks-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: multi-service-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip  
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /dotnet-server  
        pathType: Prefix
        backend:
          service:
            name: np-dotnet-server 
            port:
              number: 8080
# Replace with actual service name
# Target port for dotnet server
#      - path: /postgres-dotnet  # Path for postgres-dotnet
#        pathType: Prefix
#        backend:
#          service:
#            name: pgsql-np-dotnet  # Replace with actual service name
#            port:
#              number: 5432  # Target port for postgres-dotnet
#      - path: /postgres-rails  # Path for postgres-rails
#        pathType: Prefix
#        backend:
#          service:
#            name: pgsql-np-ruby  # Replace with actual service name
#            port:
#              number: 5432  # Target port for postgres-rails
